<resources>
    <string name="app_name">行者</string>
    <!--主页的导航栏-->
    <string name="club">俱乐部</string>
    <string name="discover">发现</string>
    <string name="personal">我的</string>
    <string name="roadBook">路书</string>
    <string name="sport">运动</string>

    <!--运动碎片-->
    <string name="fg_sport_gps">GPS</string>
    <string name="fg_sport_title">行者骑行</string>
    <string name="fg_sport_speed">时速(km/h)</string>
    <string name="fg_sport_mileage">里程(km)</string>
    <string name="fg_sport_time">时间</string>
    <string name="fg_sport_average_speed">均速(km/h)</string>
    <string name="fg_sport_max_speed">极速(km/h)</string>
    <string name="fg_sport_altitude">海拔(m)</string>
    <string name="fg_sport_climb">爬升(m)</string>
    <string name="fg_sport_begin_riding">开始骑行</string>
    <string name="fg_sport_begin_running">开始跑步</string>
    <string name="fg_sport_begin_footer">开始徒步</string>
    <string name="fg_sport_begin_skiing">开始滑雪</string>
    <string name="fg_sport_begin_swimming">开始游泳</string>
    <string name="fg_sport_begin_indoor">开始训练</string>
    <string name="fg_sport_begin_free">开始</string>
    <string name="fg_sport_end_sport">结束</string>
    <string name="fg_sport_sport_map">运动地图</string>
    <string name="fg_sport_sport_location_permission">行者,需要使用您的位置权限</string>
    <string name="fg_sport_is_sporting">正在运动</string>
    <string name="fg_sport_auto_suspend">自动暂停</string>
    <string name="fg_sport_can_not_choose_type">运动已经开始,请结束运动后再修改</string>
    <string name="fg_sport_init_text_0_00">0.00</string>
    <string name="fg_sport_init_text_0_0">0.0</string>
    <string name="fg_sport_init_text_00_00">00:00</string>

    <!--个人中心碎片-->
    <string name="fg_personal_login">立即登录</string>
    <string name="fg_personal_fans">粉丝</string>
    <string name="fg_personal_follow">关注</string>
    <string name="fg_personal_edit_info">编辑个人信息</string>
    <string name="fg_personal_grade">等级特权</string>
    <string name="fg_personal_account">行者号</string>
    <string name="fg_personal_total_mileage">总里程(km)</string>
    <string name="fg_personal_total_integral">总积分</string>
    <string name="fg_personal_total_ranking">骑行排名</string>
    <string name="fg_personal_month">8月</string>
    <string name="fg_personal_heat">热度</string>
    <string name="fg_personal_current_heat">0℃</string>
    <string name="fg_personal_max_heat">100℃</string>
    <string name="fg_personal_history">历史记录</string>
    <string name="fg_personal_medal">勋章</string>
    <string name="fg_personal_wisdom">智能设备</string>
    <string name="fg_personal_im">聊天</string>

    <!--登陆界面-->
    <string name="a_login_login">登陆</string>
    <string name="a_login_register">注册</string>
    <string name="a_login_slogan">虽千万里 吾往矣</string>
    <string name="a_login_account_hint">请输入手机/邮箱</string>
    <string name="a_login_password_hint">请输入密码</string>
    <string name="a_login_retrieve_pass">找回密码</string>
    <string name="a_login_login_type">选择登陆方式</string>
    <string name="a_login_qq">QQ</string>
    <string name="a_login_weChat">微信</string>
    <string name="a_login_blog">微博</string>

    <!--注册界面-->
    <string name="a_register_title">注册</string>
    <string name="a_register_validate">验证</string>
    <string name="a_register_pass">请输入密码</string>
    <string name="a_register_validate_num">请输入验证码</string>
    <string name="a_register_phone_num">请输入手机号</string>
    <string name="a_register_no_validate">收不到验证码，试试</string>
    <string name="a_register_voice">语音验证</string>
    <string name="a_register_email">邮箱注册</string>

    <!--运动地图界面-->
    <string name="a_sport_map_total_mileage">总里程</string>
    <string name="a_sport_map_current_speed">当前速度</string>
    <string name="a_sport_map_sport_time">运动时间</string>
    <string name="a_sport_map_navigation">路书导航</string>
    <string name="a_sport_map_switch_map">切换地图</string>
    <string name="a_sport_map_tool_box">工具箱</string>
    <string name="a_sport_map_location">定位</string>
    <string name="a_sport_map_teammate_location">队友位置</string>

    <!--运动选择popupwindow-->
    <string name="pop_sport_type_bike">骑车</string>
    <string name="pop_sport_type_run">跑步</string>
    <string name="pop_sport_type_foot">徒步</string>
    <string name="pop_sport_type_skiing">滑雪</string>
    <string name="pop_sport_type_swimming">游泳</string>
    <string name="pop_sport_type_indoor">室内训练</string>
    <string name="pop_sport_type_free">自由行</string>

    <!--吐司-->
    <string name="toast_sport_type_bike">当前为骑车模式</string>
    <string name="toast_sport_type_run">当前为跑步模式</string>
    <string name="toast_sport_type_foot">当前为徒步模式</string>
    <string name="toast_sport_type_skiing">当前为滑雪模式</string>
    <string name="toast_sport_type_swimming">当前为游泳模式</string>
    <string name="toast_sport_type_indoor">当前为室内训练模式</string>
    <string name="toast_sport_type_free">当前为自由行模式</string>
    <string name="title_activity_history">HistoryActivity</string>
</resources>

