<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/a_login_bg">

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"></View>

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_register_title"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintLeft_toLeftOf="@+id/view5"
        app:layout_constraintRight_toRightOf="@+id/view5"
        app:layout_constraintTop_toTopOf="@+id/view5" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textColor="@color/a_login_login_bt"
        android:textSize="50sp"
        android:textStyle="normal|bold"
        android:typeface="sans"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_login_slogan"
        android:textColor="@color/a_login_login_bt"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <View
        android:id="@+id/view6"
        android:layout_width="0dp"
        android:layout_height="145dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31"></View>

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/view6"
        app:layout_constraintLeft_toLeftOf="@+id/view6"
        app:layout_constraintTop_toTopOf="@+id/view6"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/phone_black" />

    <EditText

        android:id="@+id/editText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/a_register_phone_num"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textCursorDrawable="@null"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintLeft_toRightOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />

    <TextView

        android:id="@+id/tv_activity_register_validate"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/sp_currency"
        android:gravity="center"
        android:text="@string/a_register_validate"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintRight_toRightOf="@+id/view6"
        app:layout_constraintTop_toTopOf="@+id/editText"
        app:layout_constraintVertical_bias="0.62" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView8"
        app:layout_constraintRight_toRightOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:srcCompat="@mipmap/phone_validate" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:ems="10"
        android:hint="@string/a_register_validate_num"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textCursorDrawable="@null"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView14"
        app:layout_constraintLeft_toLeftOf="@+id/editText"
        app:layout_constraintRight_toRightOf="@+id/editText"
        app:layout_constraintTop_toTopOf="@+id/imageView14" />

    <View
        android:id="@+id/view7"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/a_register_tv"
        app:layout_constraintLeft_toLeftOf="@+id/editText"
        app:layout_constraintRight_toRightOf="@+id/view6"
        app:layout_constraintTop_toBottomOf="@+id/editText"></View>

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView14"
        app:layout_constraintRight_toRightOf="@+id/imageView14"
        app:layout_constraintTop_toBottomOf="@+id/imageView14"
        app:srcCompat="@mipmap/password" />

    <View
        android:id="@+id/view8"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/a_register_tv"
        app:layout_constraintLeft_toLeftOf="@+id/editText4"
        app:layout_constraintRight_toRightOf="@+id/view6"
        app:layout_constraintTop_toBottomOf="@+id/editText4"></View>

    <EditText
        android:id="@+id/editText5"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:ems="10"
        android:hint="@string/a_register_pass"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textCursorDrawable="@null"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/editText4"
        app:layout_constraintRight_toRightOf="@+id/view6"
        app:layout_constraintTop_toTopOf="@+id/imageView15" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/a_register_no_validate"
        app:layout_constraintLeft_toLeftOf="@+id/imageView15"
        app:layout_constraintTop_toBottomOf="@+id/view6" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_register_voice"
        android:textColor="@color/a_login_login_bt"
        app:layout_constraintTop_toTopOf="@+id/textView27"
        app:layout_constraintBottom_toBottomOf="@+id/textView27"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/textView27" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/a_register_email"
        android:textColor="@color/a_login_login_bt"
        app:layout_constraintBottom_toBottomOf="@+id/textView29"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView29" />

    <TextView
        android:id="@+id/tv_activity_register_register"
        android:layout_width="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/sp_currency"
        android:gravity="center"
        android:text="@string/a_register_title"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29"
        android:textSize="20sp"
        android:layout_height="35dp" />
</android.support.constraint.ConstraintLayout>
