<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/a_login_bg">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"></View>

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_login_login"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/tv_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_login_register"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textView28"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintLeft_toRightOf="@+id/textView28"
        app:layout_constraintRight_toRightOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/textView28" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textColor="@color/a_login_login_bt"
        android:textSize="50sp"
        android:textStyle="normal|bold"
        android:typeface="sans"
        app:layout_constraintLeft_toLeftOf="@+id/view"
        app:layout_constraintRight_toRightOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/a_login_slogan"
        android:textColor="@color/a_login_login_bt"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31">

    </View>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintLeft_toLeftOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:srcCompat="@mipmap/phone" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp"
        android:background="@color/a_login_bg"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/view2"
        app:layout_constraintRight_toRightOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"></View>

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintLeft_toLeftOf="@+id/imageView9"
        app:layout_constraintRight_toRightOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:srcCompat="@mipmap/password" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:ems="10"
        android:hint="@string/a_login_account_hint"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textCursorDrawable="@null"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/view3"
        app:layout_constraintRight_toRightOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:ems="10"
        android:hint="@string/a_login_password_hint"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textCursorDrawable="@null"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/view3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <TextView
        android:id="@+id/tv_activity_login_login"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/sp_currency"
        android:gravity="center"
        android:text="@string/a_login_login"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/view2"
        app:layout_constraintRight_toRightOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/a_login_retrieve_pass"
        android:textColor="@color/a_login_login_bt"
        app:layout_constraintLeft_toLeftOf="@+id/tv_activity_login_login"
        app:layout_constraintRight_toRightOf="@+id/tv_activity_login_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_activity_login_login" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/a_login_login_type"
        android:textColor="@color/a_login_type"
        app:layout_constraintLeft_toLeftOf="@+id/textView32"
        app:layout_constraintRight_toRightOf="@+id/textView32"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <View
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="20dp"
        android:background="@color/a_login_type"
        app:layout_constraintBottom_toBottomOf="@+id/textView33"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textView33"
        app:layout_constraintTop_toTopOf="@+id/textView33"
        android:id="@+id/view4"></View>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="10dp"
        android:background="@color/a_login_type"
        app:layout_constraintBottom_toBottomOf="@+id/textView33"
        app:layout_constraintLeft_toRightOf="@+id/textView33"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView33"></View>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/we_chart"
        android:id="@+id/imageView11"
        app:layout_constraintRight_toRightOf="@+id/textView33"
        app:layout_constraintLeft_toLeftOf="@+id/textView33"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/blog"
        android:id="@+id/imageView12"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="@+id/imageView11"
        android:layout_marginStart="30dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView11"
        android:layout_marginLeft="30dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/qq"
        android:id="@+id/imageView13"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="@+id/imageView11"
        app:layout_constraintRight_toLeftOf="@+id/imageView11"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp" />

    <TextView
        android:text="@string/a_login_weChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView34"
        app:layout_constraintRight_toRightOf="@+id/imageView11"
        app:layout_constraintLeft_toLeftOf="@+id/imageView11"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <TextView
        android:text="@string/a_login_blog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView35"
        app:layout_constraintLeft_toLeftOf="@+id/imageView12"
        app:layout_constraintRight_toRightOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="@+id/textView34"
        app:layout_constraintBottom_toBottomOf="@+id/textView34" />

    <TextView
        android:text="@string/a_login_qq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView36"
        app:layout_constraintLeft_toLeftOf="@+id/imageView13"
        app:layout_constraintRight_toRightOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="@+id/textView34"
        app:layout_constraintBottom_toBottomOf="@+id/textView34" />
</android.support.constraint.ConstraintLayout>
